--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,48 @@
-/*  your css code here. If applicable */
+.hero {
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.image-container {
+  flex: 1;
+}
+
+.image-container img {
+  width: 100%;
+  height: 50%;
+  object-fit: Cover;
+}
+
+.hero-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.hero-content h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.hero-content p {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+  color: white;
+}
+
+.explore-button {
+  display: inline-block;
+  padding: 15px 30px;
+  background-color: #bd081c;
+  color: white;
+  text-decoration: none;
+  border-radius: 25px;
+  transition: background-color 0.3s;
+}
+
+.explore-button:hover {
+  background-color: #9b0615;
+}
+
